--- a/src/components/departureTiles/departureTiles.css
+++ b/src/components/departureTiles/departureTiles.css
@@ -19,8 +19,8 @@
     background-color: #272727;
     color: white;
     width: 17%;
-    padding: 2.5% 1.6% 2.5% 1.6%;
-    margin: 2%;
+    padding: 2% 1.6% 2% 1.6%;
+    margin: 0.7%;
     height: fit-content;
     align-self: center;
 }
