--- a/src/containers/departureBoard/styles.scss
+++ b/src/containers/departureBoard/styles.scss
@@ -13,8 +13,8 @@
 .departure-tiles {
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
-    flex-direction: row;
+    flex-wrap: wrap;
+    flex-direction: column;
     height: 70%;
 }
 
